<resources>
    <!--Pantalla Login-->
    <string name="app_name">GameSpace</string>
    <string name="NoTienesCuenta">¿No tienes una cuenta? <b>Regístrate</b></string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvidaste_la_contrasena">¿Olvidaste la contraseña?</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="logo_principal_de_la_aplicacion">Logo principal de la aplicación</string>
    <string name="bienvenida">¡Bienvenido de nuevo!</string>

    <!--Pantalla Registro-->
    <string name="registrate">Regístrate</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="termino_de_servicio_politica_de_privacidad">Acepto los Términos de Servicio y la Política de Privacidad</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ya_tienes_cuenta_inicia_sesion">¿Ya tienes cuenta? <b>Inicia Sesión</b></string>

    <!--Pantalla Olvidar Contraseña-->
    <string name="restablecer_la_contrasena">Restablecer la contraseña</string>
    <string name="instrucciones_restablecer_contrasena">Introduce el correo electrónico y te enviaremos instrucciones para restablecer la contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>

    <!--Pantalla Editar perfil-->
    <string name="cuenta">Cuenta</string>
    <string name="descripcion_img_perfil">Foto de perfil del usuario</string>
    <string name="guardar">Guardar</string>

    <!--Pantalla administrador insertar videojuego-->
    <string name="insertar_videojuego">Insertar Videojuego</string>
    <string name="descripcion_img_videojuego_admin_insertar">Insertar imagen del videojuego</string>
    <string name="descripcion">Descripción</string>
    <string name="crear">Crear</string>
    <string name="imagen">Imágen</string>
    <string name="genero">Género</string>
    <string name="escoge_img_portada_game">Escoge una imágen para la portada del videojuego</string>

    <!--Pantalla administrador modificar videojuego-->
    <string name="modificar_videojuego">Modificar Videojuego</string>
    <string name="descripcion_img_videojuego_admin_modificar">Modificar imagen del videojuego</string>
    <string name="modificar">Modificar</string>
    <string name="escoge_nueva_img_portada_game">Modifica la imágen para la portada del videojuego</string>

    <!--Pantalla mostrar información adicional del videojuego-->
    <string name="descripcion_de_la_imagen_del_videojuego">descripcion de la imagen del videojuego</string>
    <string name="txt_nombre_videojuego_prueba">Nombre del videojuego</string>
    <string name="descripcion_del_videojuego">Descripción del videojuego</string>
    <string name="icono_de_marcador_anadir">icono de marcador añadir</string>
    <string name="lo_quiero">¡Lo quiero!</string>
    <string name="icono_de_marcador_para_obtenerlo">icono de marcador para obtenerlo</string>
    <string name="lo_tengo">Lo tengo</string>

    <!--Menú principal-->
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="administrador">Administrador</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!--Pantalla inicio listado videojuegos-->
    <string name="Search">Buscar videojuegos</string>
    <string name="juegos_populares">Juegos Populares</string>
    <string name="titulo_videojuego">Titulo Videojuego</string>

    <!--Pantalla Biblioteca-->
    <string name="juegos_deseados">Juegos Deseados</string>
    <string name="juegos_obtenidos">Juegos Obtenidos</string>

    <!--Pantalla Biblioteca Tab Layouts-->
    <string name="searchHintJd">Busca en tus deseados...</string>
    <string name="searchHintJo">Busca en tu colección...</string>

    <!--Pantalla Administrador-->
    <string name="listado_de_los_videojuegos_totales">Listado de los videojuegos totales</string>
    <string name="icono_de_eliminar_videojuego">icono de eliminar videojuego</string>
    <string name="icono_de_editar_videojuego">icono de editar videojuego</string>
    <string name="tipo_de_genero">Tipo de genero</string>
    <string name="no_hay_videojuegos">No hay videojuegos</string>


    <!--SPINNER-->
    <string-array name="generos_juegos">
        <item>-</item>
        <item>Acción</item>
        <item>Arcade</item>
        <item>Aventura</item>
        <item>Deporte</item>
        <item>Estrategia</item>
        <item>Simulación</item>
        <item>Survival</item>
    </string-array>


</resources>