<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/default_margin"
    tools:context=".Activitys.RecuperarContrasena">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:contentDescription="@string/logo_principal_de_la_aplicacion"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_restablece_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/restablecer_la_contrasena"
        android:textSize="@dimen/size_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_instrucciones_restablecer_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginTopS"
        android:text="@string/instrucciones_restablecer_contrasena"
        android:textSize="@dimen/size_title3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_restablece_contrasena" />

    <TextView
        android:id="@+id/txt_correo_restablece_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBig"
        android:text="@string/correo_electronico"
        android:textColor="@color/black"
        android:textSize="@dimen/size_title3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_instrucciones_restablecer_contrasena" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_correo_retablecer_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginTopSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo_restablece_contrasena">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_edit_correo_retablecer_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="@dimen/btn_width_doble"
        android:layout_height="@dimen/btn_height_doble"
        android:layout_marginTop="@dimen/marginTopBig"
        android:text="@string/cancelar"
        android:textSize="@dimen/size_title3"
        app:layout_constraintEnd_toStartOf="@+id/btn_enviar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_correo_retablecer_contrasena"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="@dimen/btn_width_doble"
        android:layout_height="@dimen/btn_height_doble"
        android:layout_marginStart="30dp"
        android:text="@string/enviar"
        android:textSize="@dimen/size_title3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancelar"
        app:layout_constraintTop_toTopOf="@+id/btn_cancelar"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>