<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.mostrar_videojuego">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <ImageView
                android:id="@+id/img_videojuego_mostrar"
                android:layout_width="162dp"
                android:layout_height="183dp"
                android:layout_marginTop="@dimen/marginTop"
                android:contentDescription="@string/descripcion_de_la_imagen_del_videojuego"
                android:src="@drawable/logo_gs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_nombre_videojuego_mostrar"
                android:layout_width="195dp"
                android:layout_height="53dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/txt_nombre_videojuego_prueba"
                android:textColor="@color/black"
                android:textSize="@dimen/size_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_videojuego_mostrar"
                app:layout_constraintTop_toTopOf="@+id/img_videojuego_mostrar" />

            <View
                android:id="@+id/divider_mostrar_juego"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/MarginTopS"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_marcador_anadir" />

            <TextView
                android:id="@+id/txt_descripcion_videojuego_mostrar"
                android:layout_width="match_parent"
                android:layout_height="430dp"
                android:layout_marginTop="@dimen/marginTop"
                android:gravity="center|top"
                android:text="@string/descripcion_del_videojuego"
                android:textSize="@dimen/size_title2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_mostrar_juego" />

            <ImageView
                android:id="@+id/img_marcador_anadir"
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/MarginTopSmall"
                android:layout_marginEnd="@dimen/MarginTopSmall"
                android:contentDescription="@string/icono_de_marcador_anadir"
                android:src="@drawable/marcador_anadir"
                app:layout_constraintBottom_toBottomOf="@+id/img_videojuego_mostrar"
                app:layout_constraintEnd_toStartOf="@+id/txt_lo_quiero"
                app:layout_constraintTop_toBottomOf="@+id/img_anadir" />

            <TextView
                android:id="@+id/txt_lo_quiero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/lo_quiero"
                android:textSize="@dimen/size_title3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_marcador_anadir" />

            <ImageView
                android:id="@+id/img_anadir"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/icono_de_marcador_para_obtenerlo"
                android:src="@drawable/mas"
                app:layout_constraintEnd_toStartOf="@+id/txt_lo_tengo"
                app:layout_constraintTop_toBottomOf="@+id/txt_nombre_videojuego_mostrar" />

            <TextView
                android:id="@+id/txt_lo_tengo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:text="@string/lo_tengo"
                android:textSize="@dimen/size_title3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_anadir" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>