<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardGames"
    android:layout_width="165dp"
    android:layout_height="260dp"
    android:background="@color/white"
    android:layout_marginStart="@dimen/MarginTopS"
    android:layout_marginTop="@dimen/MarginTopS"
    android:layout_marginBottom="@dimen/MarginTopS">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_game"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/descripcion_de_la_imagen_del_videojuego"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txt_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_videojuego"
            android:textAlignment="center"
            android:textSize="@dimen/size_title2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_game" />

        <ImageView
            android:id="@+id/img_edit_game"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/MarginTopS"
            android:contentDescription="@string/icono_de_editar_videojuego"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_game"
            app:srcCompat="@drawable/editar" />

        <ImageView
            android:id="@+id/img_delete_game"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/MarginTopS"
            android:contentDescription="@string/icono_de_eliminar_videojuego"
            app:layout_constraintStart_toEndOf="@+id/img_edit_game"
            app:layout_constraintTop_toBottomOf="@+id/txt_game"
            app:srcCompat="@drawable/delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>