<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <TextView
        android:id="@+id/txt_insertar_juego_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/marginTopB"
        android:text="@string/insertar_videojuego"
        android:textSize="@dimen/size_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_insert_game_admin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/MarginTopS"
        android:contentDescription="@string/descripcion_img_videojuego_admin_insertar"
        android:src="@drawable/mas"
        app:layout_constraintBottom_toBottomOf="@+id/txt_insertar_juego_admin"
        app:layout_constraintStart_toEndOf="@+id/txt_insertar_juego_admin"
        app:layout_constraintTop_toTopOf="@+id/txt_insertar_juego_admin" />

    <TextView
        android:id="@+id/txt_juegos_totales_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/marginTopBig"
        android:text="@string/listado_de_los_videojuegos_totales"
        android:textSize="@dimen/size_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerJuegosAdmin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recyclerView_admin_heigh"
        android:layout_marginTop="@dimen/MarginTopS"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_juegos_totales_admin"
        app:spanCount="2" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/marginTopB"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_insertar_juego_admin" />

    <TextView
        android:id="@+id/txt_NoHayJuegos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_videojuegos"
        android:textSize="@dimen/size_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>